--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "60534a3e",
    "metadata": {},
    "outputs": [],
@@ -25,60 +25,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "bbbad17a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.describe of     user_id    age country  purchases  revenue\n",
-       "0         1   25.0      FR          7      749\n",
-       "1         2   24.0      RU          5     1115\n",
-       "2         3   52.0      FR          7      399\n",
-       "3         4   31.0      RU          6      654\n",
-       "4         5    NaN      DE          6     1296\n",
-       "5         6  120.0      FR         -1      785\n",
-       "6         7   46.0      RU          0        0\n",
-       "7         8   28.0      CN          2      456\n",
-       "8         9   39.0      US          4      980\n",
-       "9        10   24.0      RU          7      511\n",
-       "10       11   24.0      US          4        0\n",
-       "11       12   20.0      CN          7     1652\n",
-       "12       13    NaN      US          9      630\n",
-       "13       14   36.0      DE          9     2358\n",
-       "14       15   57.0      FR          7      693\n",
-       "15       16   22.0      FR          3      183\n",
-       "16       17   32.0      FR          6     1608\n",
-       "17       18   24.0      RU          0        0\n",
-       "18       19   47.0      RU          3      432\n",
-       "19       20   31.0      RU          2      442\n",
-       "20       21    5.0      RU          8     1488\n",
-       "21       22   33.0      FR          6      546\n",
-       "22       23   42.0      US          4      904\n",
-       "23       24   32.0      DE         11     2475\n",
-       "24       25   21.0      RU          5      650\n",
-       "25       26   35.0      US          5      330\n",
-       "26       27   54.0      RU          6     1302\n",
-       "27       28   43.0      US          3      828\n",
-       "28       29   47.0      FR          6     1440\n",
-       "29       30   52.0      DE          6      702\n",
-       "30       31   55.0      FR          1      142\n",
-       "31       32   26.0      RU          6     1080\n",
-       "32       33   23.0      US          5      445\n",
-       "33       34   28.0      FR          0        0\n",
-       "34       35   45.0      FR          2      404\n",
-       "35       36   51.0      US          3      342\n",
-       "36       37   18.0      DE          4     1104\n",
-       "37       38   35.0      DE          3      738\n",
-       "38       39   39.0      FR          7     1162\n",
-       "39       40   34.0      RU          7     2086\n",
-       "40       10   24.0      RU          7      511>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.head of     user_id    age country  purchases  revenue\n",
+      "0         1   25.0      FR          7      749\n",
+      "1         2   24.0      RU          5     1115\n",
+      "2         3   52.0      FR          7      399\n",
+      "3         4   31.0      RU          6      654\n",
+      "4         5    NaN      DE          6     1296\n",
+      "5         6  120.0      FR         -1      785\n",
+      "6         7   46.0      RU          0        0\n",
+      "7         8   28.0      CN          2      456\n",
+      "8         9   39.0      US          4      980\n",
+      "9        10   24.0      RU          7      511\n",
+      "10       11   24.0      US          4        0\n",
+      "11       12   20.0      CN          7     1652\n",
+      "12       13    NaN      US          9      630\n",
+      "13       14   36.0      DE          9     2358\n",
+      "14       15   57.0      FR          7      693\n",
+      "15       16   22.0      FR          3      183\n",
+      "16       17   32.0      FR          6     1608\n",
+      "17       18   24.0      RU          0        0\n",
+      "18       19   47.0      RU          3      432\n",
+      "19       20   31.0      RU          2      442\n",
+      "20       21    5.0      RU          8     1488\n",
+      "21       22   33.0      FR          6      546\n",
+      "22       23   42.0      US          4      904\n",
+      "23       24   32.0      DE         11     2475\n",
+      "24       25   21.0      RU          5      650\n",
+      "25       26   35.0      US          5      330\n",
+      "26       27   54.0      RU          6     1302\n",
+      "27       28   43.0      US          3      828\n",
+      "28       29   47.0      FR          6     1440\n",
+      "29       30   52.0      DE          6      702\n",
+      "30       31   55.0      FR          1      142\n",
+      "31       32   26.0      RU          6     1080\n",
+      "32       33   23.0      US          5      445\n",
+      "33       34   28.0      FR          0        0\n",
+      "34       35   45.0      FR          2      404\n",
+      "35       36   51.0      US          3      342\n",
+      "36       37   18.0      DE          4     1104\n",
+      "37       38   35.0      DE          3      738\n",
+      "38       39   39.0      FR          7     1162\n",
+      "39       40   34.0      RU          7     2086\n",
+      "40       10   24.0      RU          7      511>\n",
+      "<bound method DataFrame.info of     user_id    age country  purchases  revenue\n",
+      "0         1   25.0      FR          7      749\n",
+      "1         2   24.0      RU          5     1115\n",
+      "2         3   52.0      FR          7      399\n",
+      "3         4   31.0      RU          6      654\n",
+      "4         5    NaN      DE          6     1296\n",
+      "5         6  120.0      FR         -1      785\n",
+      "6         7   46.0      RU          0        0\n",
+      "7         8   28.0      CN          2      456\n",
+      "8         9   39.0      US          4      980\n",
+      "9        10   24.0      RU          7      511\n",
+      "10       11   24.0      US          4        0\n",
+      "11       12   20.0      CN          7     1652\n",
+      "12       13    NaN      US          9      630\n",
+      "13       14   36.0      DE          9     2358\n",
+      "14       15   57.0      FR          7      693\n",
+      "15       16   22.0      FR          3      183\n",
+      "16       17   32.0      FR          6     1608\n",
+      "17       18   24.0      RU          0        0\n",
+      "18       19   47.0      RU          3      432\n",
+      "19       20   31.0      RU          2      442\n",
+      "20       21    5.0      RU          8     1488\n",
+      "21       22   33.0      FR          6      546\n",
+      "22       23   42.0      US          4      904\n",
+      "23       24   32.0      DE         11     2475\n",
+      "24       25   21.0      RU          5      650\n",
+      "25       26   35.0      US          5      330\n",
+      "26       27   54.0      RU          6     1302\n",
+      "27       28   43.0      US          3      828\n",
+      "28       29   47.0      FR          6     1440\n",
+      "29       30   52.0      DE          6      702\n",
+      "30       31   55.0      FR          1      142\n",
+      "31       32   26.0      RU          6     1080\n",
+      "32       33   23.0      US          5      445\n",
+      "33       34   28.0      FR          0        0\n",
+      "34       35   45.0      FR          2      404\n",
+      "35       36   51.0      US          3      342\n",
+      "36       37   18.0      DE          4     1104\n",
+      "37       38   35.0      DE          3      738\n",
+      "38       39   39.0      FR          7     1162\n",
+      "39       40   34.0      RU          7     2086\n",
+      "40       10   24.0      RU          7      511>\n",
+      "<bound method NDFrame.describe of     user_id    age country  purchases  revenue\n",
+      "0         1   25.0      FR          7      749\n",
+      "1         2   24.0      RU          5     1115\n",
+      "2         3   52.0      FR          7      399\n",
+      "3         4   31.0      RU          6      654\n",
+      "4         5    NaN      DE          6     1296\n",
+      "5         6  120.0      FR         -1      785\n",
+      "6         7   46.0      RU          0        0\n",
+      "7         8   28.0      CN          2      456\n",
+      "8         9   39.0      US          4      980\n",
+      "9        10   24.0      RU          7      511\n",
+      "10       11   24.0      US          4        0\n",
+      "11       12   20.0      CN          7     1652\n",
+      "12       13    NaN      US          9      630\n",
+      "13       14   36.0      DE          9     2358\n",
+      "14       15   57.0      FR          7      693\n",
+      "15       16   22.0      FR          3      183\n",
+      "16       17   32.0      FR          6     1608\n",
+      "17       18   24.0      RU          0        0\n",
+      "18       19   47.0      RU          3      432\n",
+      "19       20   31.0      RU          2      442\n",
+      "20       21    5.0      RU          8     1488\n",
+      "21       22   33.0      FR          6      546\n",
+      "22       23   42.0      US          4      904\n",
+      "23       24   32.0      DE         11     2475\n",
+      "24       25   21.0      RU          5      650\n",
+      "25       26   35.0      US          5      330\n",
+      "26       27   54.0      RU          6     1302\n",
+      "27       28   43.0      US          3      828\n",
+      "28       29   47.0      FR          6     1440\n",
+      "29       30   52.0      DE          6      702\n",
+      "30       31   55.0      FR          1      142\n",
+      "31       32   26.0      RU          6     1080\n",
+      "32       33   23.0      US          5      445\n",
+      "33       34   28.0      FR          0        0\n",
+      "34       35   45.0      FR          2      404\n",
+      "35       36   51.0      US          3      342\n",
+      "36       37   18.0      DE          4     1104\n",
+      "37       38   35.0      DE          3      738\n",
+      "38       39   39.0      FR          7     1162\n",
+      "39       40   34.0      RU          7     2086\n",
+      "40       10   24.0      RU          7      511>\n"
+     ]
     }
    ],
    "source": [
@@ -89,9 +170,9 @@
     "# Чтобы графики показывались внутри ноутбука\n",
     "%matplotlib inline\n",
     "df = pd.read_csv(\"S02-hw-dataset.csv\")\n",
-    "df.head\n",
-    "df.info\n",
-    "df.describe\n"
+    "print(df.head)\n",
+    "print(df.info)\n",
+    "print(df.describe)\n"
    ]
   },
   {
@@ -104,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fa37d89a",
    "metadata": {},
    "outputs": [
@@ -112,77 +193,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "user_id      0.00000\n",
+      "age          0.04878\n",
+      "country      0.00000\n",
+      "purchases    0.00000\n",
+      "revenue      0.00000\n",
+      "dtype: float64\n",
+      "user_id      0\n",
+      "age          2\n",
+      "country      0\n",
+      "purchases    0\n",
+      "revenue      0\n",
+      "dtype: int64\n",
+      "1\n",
       "    user_id   age country  purchases  revenue\n",
-      "40       10  24.0      RU          7      511\n"
+      "40       10  24.0      RU          7      511\n",
+      "    user_id    age country  purchases  revenue\n",
+      "5         6  120.0      FR         -1      785\n",
+      "10       11   24.0      US          4        0\n",
+      "20       21    5.0      RU          8     1488\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>country</th>\n",
-       "      <th>purchases</th>\n",
-       "      <th>revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>FR</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>US</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>21</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1488</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    user_id    age country  purchases  revenue\n",
-       "5         6  120.0      FR         -1      785\n",
-       "10       11   24.0      US          4        0\n",
-       "20       21    5.0      RU          8     1488"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -190,11 +220,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "# пропуски\n",
-    "df.isna().mean()\n",
+    "print(df.isna().mean())\n",
     "\n",
-    "df.isna().sum()\n",
+    "print(df.isna().sum())\n",
     "\n",
-    "df.duplicated().sum()\n",
+    "print(df.duplicated().sum())\n",
     "# дублированные строки\n",
     "print(df[df.duplicated()])\n",
     "\n",
@@ -210,7 +240,7 @@
     "\n",
     "# Все подозрительные записи\n",
     "suspicious_rows = df[mask_age_implausible | mask_neg_purchases | mask_zero_revenue_with_purchases]\n",
-    "suspicious_rows\n"
+    "print(suspicious_rows)\n"
    ]
   },
   {
@@ -232,39 +262,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "8da0f464",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\podne\\AppData\\Local\\Temp\\ipykernel_12572\\1139208542.py:22: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df.groupby(\"age_group\")[\"revenue\"].mean()\n"
+      "country\n",
+      "RU    13\n",
+      "FR    12\n",
+      "US     8\n",
+      "DE     6\n",
+      "CN     2\n",
+      "Name: count, dtype: int64\n",
+      "country\n",
+      "RU    0.317073\n",
+      "FR    0.292683\n",
+      "US    0.195122\n",
+      "DE    0.146341\n",
+      "CN    0.048780\n",
+      "Name: proportion, dtype: float64\n",
+      "          mean_age  mean_purchases  total_revenue\n",
+      "country                                          \n",
+      "CN       24.000000        4.500000           2108\n",
+      "DE       34.600000        6.500000           8673\n",
+      "FR       46.250000        4.250000           8111\n",
+      "RU       30.076923        4.769231          10271\n",
+      "US       36.714286        4.625000           4459\n",
+      "age_group\n",
+      "30-44    14\n",
+      "18-29    13\n",
+      "45-59     9\n",
+      "0-17      2\n",
+      "60+       1\n",
+      "Name: count, dtype: int64\n",
+      "age_group\n",
+      "0-17     1296.000000\n",
+      "18-29     565.538462\n",
+      "30-44    1108.214286\n",
+      "45-59     605.777778\n",
+      "60+       785.000000\n",
+      "Name: revenue, dtype: float64\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "age_group\n",
-       "0-17     1296.000000\n",
-       "18-29     565.538462\n",
-       "30-44    1108.214286\n",
-       "45-59     605.777778\n",
-       "60+       785.000000\n",
-       "Name: revenue, dtype: float64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\podne\\AppData\\Local\\Temp\\ipykernel_12572\\1097507341.py:22: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  print(df.groupby(\"age_group\")[\"revenue\"].mean())\n"
+     ]
     }
    ],
    "source": [
-    "df[\"country\"].value_counts()\n",
+    "print(df[\"country\"].value_counts())\n",
     "\n",
-    "df[\"country\"].value_counts(normalize=True)\n",
+    "print(df[\"country\"].value_counts(normalize=True))\n",
     "\n",
     "# считаем по странам средний возраст, среднее число покупок, суммарную выручку\n",
     "grouped_country = df.groupby(\"country\").agg(\n",
@@ -272,7 +327,7 @@
     "    mean_purchases=(\"purchases\", \"mean\"),\n",
     "    total_revenue=(\"revenue\", \"sum\")\n",
     ")\n",
-    "grouped_country\n",
+    "print(grouped_country)\n",
     "\n",
     "# коридор по возрасту\n",
     "bins = [0, 18, 30, 45, 60, 120]\n",
@@ -280,10 +335,10 @@
     "\n",
     "df[\"age_group\"] = pd.cut(df[\"age\"], bins=bins, labels=labels)\n",
     "\n",
-    "df[\"age_group\"].value_counts()\n",
+    "print(df[\"age_group\"].value_counts())\n",
     "\n",
     "# средняя выруска по группам возрастов\n",
-    "df.groupby(\"age_group\")[\"revenue\"].mean()\n",
+    "print(df.groupby(\"age_group\")[\"revenue\"].mean())\n",
     "\n"
    ]
   },
